kubernetes/by-cluster/single-spicy/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
spec:
  gatewayClassName: default
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: default
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: default-cluster-gateway-tls-certificates
    allowedRoutes:
      namespaces:
        from: All
  - name: ssh
    protocol: TCP
    port: 22
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TCPRoute
  - name: paseo
    protocol: TCP
    port: 6767
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TCPRoute
